securedrop/sass/_base.sass
@import button-rules
@import font-awesome
@import normalize

=base_rules
  *
    box-sizing: border-box
    // Firefox 24 (the basis of TBB at the time of this writing) does not support unprefixed box-sizing.
    -moz-box-sizing: border-box

  +font_rules
  +normalize_rules
  +button_rules

  body
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
    font-weight: 300
    padding: 0px
    margin: 0px

  h1, h2, h3
    font-weight: bold

  h1, h2
    color: #7985aa

  h1
    text-align: left
    font-size: 30px

  h2
    font-size: 25px

    &.welcome-text
      color: inherit
      text-align: center

  h3
    text-align: center

  .content
    position: relative
    margin: 15px auto
    width: 980px

  a
    color: $color_purple_medium

    &.plain
      color: #333

      &:hover
        color: $color_purple_medium

  .document-actions
    margin-bottom: 20px
    text-align: left

  .doc-check
    margin-right: 10px

  a.text-link
    color: $color_purple_medium

  .sd-button
    font-weight: normal
    letter-spacing: 0.15em

  .select
    border: 1px #C4C2C2 solid
    padding: 3px 10px
    font-size: small
    color: #6F6F6F
    margin-right: 2px

    &:hover
      border-color: $color_grey_medium
      color: #333

  .pull-bottom
    position: absolute
    bottom: 0px

  .pull-left
    float: left

  .pull-right
    float: right

  #header
    float: left

    .powered
      margin-top: 10px
      font-size: 13px
      text-transform: uppercase
      text-align: center
      color: #666666
      letter-spacing: normal

  #cols
    padding: 0

    li.source
      background: $color_grey_xlight
      border-bottom: 1px solid #ddd
      padding: 6px
      text-align: left

      &:last-child
        border-bottom: none

      .date
        float: right
        background-color: $color_grey_medium
        color: #ffffff
        font-size: 10px
        font-weight: bold
        padding: 5px
        margin: 5px

      .designation
        display: inline-block
        min-width: 260px

        a
          color: #333
          text-decoration: none
          font-weight: bold
          margin: 5px
          display: inline-block

      .submission-count
        display: inline-block

        span
          border: 1px solid #dedede
          padding: 3px
          margin-right: 5px
          font-size: 12px

          &.unread
            border: 0

  div.bubble
    width: 415px
    position: absolute
    background-color: #ffffff
    left: 115px
    top: 58px
    border-radius: 10px
    border: 3px solid #666
    padding: 10px 25px
    display: none

    &:before, &:after
      content: ''
      position: absolute
      border-width: 25px
      border-style: solid
      width: 0px
      height: 0px

    &:before
      border-color: transparent transparent #666 #666
      top: -50px
      left: 30px

    &:after
      border-color: transparent transparent #fff #fff
      left: 33px
      top: -43px

    &.tbb31plus
      // The NoScript logo was moved to the left of the back/forward buttons in TBB 4.0 (based on Firefox 31)
      left: 5px

  .panel
    max-width: 800px
    width: 100%
    margin: 0 auto
    padding: 16px 30px
    border: 1px solid #c3c3c3
    float: right

  .warning
    display: none
    background-color: $color_warning_red
    color: white
    padding: 10px 0
    width: 100%
    text-align: center
    font-size: small
    box-sizing: border-box
    -moz-box-sizing: border-box

    a
      color: white

  #warning-close
    cursor: pointer

  .confirm-prompt
    visibility: hidden

    &:target
      visibility: visible

  p.serious
    font-weight: bold
    color: $color_warning_red

  .code
    background: rgba(0, 0, 0, 0.05)
    box-sizing: border-box
    -moz-box-sizing: border-box
    padding: 10px 15px
    border-bottom: 2px solid $color_warning_red
    font-size: large
    text-align: center

  .code-reminder
    background: rgba(0, 0, 0, 0.05)
    box-sizing: border-box
    -moz-box-sizing: border-box
    padding: 5px 10px
    text-align: center

  .snippet
    border: 1px solid #c3c3c3
    background: $color_grey_xlight

    .attachment
      background-color: $color_grey_xlight
      padding: 12px
      width: 330px
      display: inline-block
      vertical-align: top

      .file-options
        padding-top: 8px

      input[type="file"]
        background-color: rgba(0, 0, 0, 0.05)
        padding: 10px
        font-size: 14px
        min-width: 100%
        max-width: 100%

    .message
      display: inline-block
      vertical-align: top
      width: 401px
      background: white
      overflow: hidden

      textarea
        vertical-align: top
        display: block
        padding: 10px
        min-width: 406px
        max-width: 406px
        min-height: 168px
        border: none

        &:focus
          outline: none

  hr
    &.cut-out
      border-style: dashed
      border-bottom: none
      border-color: #c3c3c3

    &.no-line
      clear: both
      border: none
      height: 10px

  .clearfix
    clear: both

  .center
    text-align: center

  button.center
    display: block
    margin: 0 auto

  $color_error_border: #F68E8E
  $color_error_background: #FCE3E3

  aside, .flash, .banner-warning
    border-radius: 10px

    i
      font-size: 18pt

  aside
    background-color: #fffbe6
    color: #82572d

  aside, .flash
    padding: 10px
    margin: 10px
    text-align: left
    font-size: medium

  .flash
    .icon
      float: left

    .notification, .error, .important
      .message
        float: right

    &.success
      border: 1px solid #E1F1E5
      background-color: #E6FFEB

      strong
        color: #299549

    &.notification
      border: 1px solid #8ed9f6
      background-color: #e3f7fc
      font-size: medium
      font-weight: normal

      i
        color: #4f7685

    &.error
      border: 1px solid $color_error_border
      background-color: $color_error_background

      i
        color: #D62727

    &.important
      border: 1px solid #EBDCEB
      background: #FDFAFD

      strong
        color: #673466
      p
        color: #555555

  .banner-warning
    border: 1px solid $color_error_border
    background-color: $color_error_background

    i
      color: #D62727

  div
    &#select-container
      display: inline

    &.document-actions button
      font-size: 14px
      padding: 6px 15px

  .grid-item
    display: inline-block
    letter-spacing: normal

  .option
    display: inline-block
    width: 30%
    min-width: 300px
    min-height: 310px
    margin: 1%
    padding: 25px
    border: 1px solid #c3c3c3
    vertical-align: top
    position: relative

    &.alt
      background-color: $color_purple_medium
      color: white

    &.selected
      width: 500px
      height: auto

  .logo
    width: 250px
    margin-right: 20px
    margin-top: 36px
    margin-left: 9px

    &.small
      width: 150px
      margin-top: 20px

  .submissions
    padding-left: 0px

  .submission
    background: $color_grey_xlight
    border-bottom: 1px solid #ddd
    padding: 10px
    text-align: left

    &:last-child
      border-bottom: none

    .file
      min-width: 300px
      display: inline-block

      &.reply
        font-size: small

    .info
      font-size: 12px
      color: #666666

  ul.plain
    list-style: none

  ul.starred
    margin-bottom: 1.33em

  div#logout
    float: right
    margin: 1em 1em 0 1em

  label
    cursor: pointer

  em.light
    color: gray

  div#qrcode_container
    text-align: center

  span#shared_secret
    background-color: #FFFD9E
    color: #555
    padding: 4px
    border: 1px solid $color_grey_medium

  table#users
    width: 100%

    td
      text-align: center

  #regenerate-codename-btn
    padding: 5px 5px
    color: $color_grey_medium
    font-size: 14px

    &:hover
      color: #333

    &:focus
      outline: 0

  #regenerate-codename-btn-label
    font-size: 10px

  footer
    clear: both
    text-align: center
    border-top: 1px dashed $color_grey_xlight
    margin-top: 20px
    padding-top: 20px
    r: $color_grey_medium

